# gnomad_to_parquet

./: Cargo.toml  readme.md
old/: conversion_parquet_iceberg_via_spark_sql.txt  format_des_fichiers  gnomad_to_parquet_per_chrom.rs
src/: main.rs  main_old.rs
test_data/: gnomad-4.1-chr1-1000.vcf.bgz  gnomad-4.1-chr1-without-info.vcf.bgz  gnomad-4.1-chr2-1000.vcf.bgz
